<resources>
    <string name="app_name">Whatsweb Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="chat">Chat</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="documents">Documents</string>
    <string name="_40_documents">40 Documents</string>
    <string name="_60_voices">60 Voices</string>
    <string name="voices">Voices</string>
    <string name="music">Music</string>
    <string name="_20_messages">20 Messages</string>
    <string name="_102_photos">102 Photos</string>
    <string name="_60_videos">60 Videos</string>
    <string name="_60_audios">60 Audios</string>
    <string name="copy_text">Copy text</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="_1_month">1 Month</string>
    <string name="_10">$3.99</string>
    <string name="_30">$19.99</string>
    <string name="_1_year">1 Year</string>
    <string name="_1_time">1-Time Purchase</string>
    <string name="_70">$29.99</string>
    <string name="subscription_text">You can cancel any subscription at any time in Subscriptions on Google Play. You’ll be charged automatically every month/year (as per subscribed subscription) until you cancel. You won’t be charged if you cancel before the trial period finished. Billing starts at the end of your free trail. Trail period start as soon as your subscription is confirmed by Google. Google send you reminder before your trial ends</string>
    <string name="cancel">Cancel</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept">accept</string>
    <string name="html_content">By clicking the ACCEPT button, you are confirming your agreement with our privacy policy and the terms and conditions governing the use of our app.</string>
    <string name="text_confirmation">Connect and access to multiple devices simultaneously. Stay in touch wherever you are!</string>
    <string name="title_name">Title Name</string>
    <string name="text_description">Text Description</string>
    <string name="message">Message</string>
    <string name="timestamp">Timestamp</string>
    <string name="country_code">Country Code</string>
    <string name="url">URL</string>
    <string name="html_content_second">For more information please visit our Privacy Policy.</string>
    <string name="agreement">I have read and agree to the privacy policy</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="rate_us">Rate Us!</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="email_feedback">rnmappsdev@gmail.com</string>
    <string name="privacy_policy_website">https://rnmappsdev.blogspot.com/2024/02/rnm-apps-privacy-policy.html</string>
    <string name="id_interstitial_ad"> </string>
    <string name="id_rewarded_ad">ca-app-pub-3940256099942544/5224354917</string>
    <string name="id_native_ad"> </string>
    <string name="no_items_found">No items found</string>
</resources>