<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_background"
    tools:context=".Activities.WhatsDeleteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary_green"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/item_whatsdelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/chat_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat_whatsdelete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/chat_icon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/messages_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_20_messages" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout_2"
        android:layout_margin="@dimen/_16sdp"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/item_whatsdelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_1">

        <ImageView
            android:id="@+id/image_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_whatsdelete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/image_icon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/images_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_102_photos" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:id="@+id/relativeLayout_3"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/item_whatsdelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_2">

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/video_deletewhats"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/video_icon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/videos_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_60_videos" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:id="@+id/relativeLayout_4"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/item_whatsdelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_3">

        <ImageView
            android:id="@+id/audio_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/audio_whatsdelete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audios"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/audio_icon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/audios_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_60_audios" />

    </RelativeLayout>

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/nativeWhatsDeleteAd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/item_rectangle_design"
        android:padding="@dimen/_8sdp"
        app:gnt_template_type="@layout/gnt_medium_template_view"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout_4"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout_4"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_4"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:id="@+id/relativeLayout_5"
        android:padding="@dimen/_6sdp"
        android:background="@drawable/item_whatsdelete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nativeWhatsDeleteAd">

        <ImageView
            android:id="@+id/document_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/document_deletewhats"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/documents"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/document_icon"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/documents_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_40_documents" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/item_whatsdelete"
        android:padding="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout_5">

        <ImageView
            android:id="@+id/voice_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_deletewhats" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@id/voice_icon"
            android:text="@string/voices"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/voices_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_60_voices" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>