<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/exit_screen_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/nativeExitAd"
        app:layout_constraintStart_toStartOf="@+id/nativeExitAd"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/nativeExitAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/item_rectangle_design"
        android:padding="@dimen/_8sdp"
        app:gnt_template_type="@layout/gnt_small_template_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rate_us_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/nativeExitAd"
        app:layout_constraintStart_toStartOf="@+id/nativeExitAd"
        app:layout_constraintTop_toBottomOf="@+id/nativeExitAd">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/rate_us"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="How would you love this app?"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/rating_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/rating_stars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBtnExit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_subscription_btn"
        android:backgroundTint="@color/color_blue_exit"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnBtnCancel"
        app:layout_constraintEnd_toEndOf="@+id/rate_us_view"
        app:layout_constraintStart_toStartOf="@+id/rate_us_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBtnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_subscription_btn"
        android:backgroundTint="@color/color_grey_transparent"
        android:text="Cancel"
        android:layout_margin="@dimen/_8sdp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rate_us_view"
        app:layout_constraintStart_toStartOf="@+id/rate_us_view" />
</androidx.constraintlayout.widget.ConstraintLayout>